#103 : Cleaned up bxbot-exchanges module