@@ -38,9 +38,10 @@ import org.apache.logging.log4j.Logger;
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
 import javax.xml.bind.DatatypeConverter;
-import java.io.UnsupportedEncodingException;
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.net.*;
+import java.nio.charset.StandardCharsets;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.text.DecimalFormat;
@@ -464,18 +465,14 @@ public final class GdaxExchangeAdapter extends AbstractExchangeAdapter implement
     }
 
     @Override
-    public BigDecimal getPercentageOfBuyOrderTakenForExchangeFee(String marketId) throws TradingApiException,
-            ExchangeNetworkException {
-
+    public BigDecimal getPercentageOfBuyOrderTakenForExchangeFee(String marketId) {
         // GDAX does not provide API call for fetching % buy fee; it only provides the fee monetary value for a
         // given order via e.g. /orders/<order-id> API call. We load the % fee statically from exchange.xml
         return buyFeePercentage;
     }
 
     @Override
-    public BigDecimal getPercentageOfSellOrderTakenForExchangeFee(String marketId) throws TradingApiException,
-            ExchangeNetworkException {
-
+    public BigDecimal getPercentageOfSellOrderTakenForExchangeFee(String marketId) {
         // GDAX does not provide API call for fetching % sell fee; it only provides the fee monetary value for a
         // given order via e.g. /orders/<order-id> API call. We load the % fee statically from exchange.xml
         return sellFeePercentage;
@@ -725,10 +722,9 @@ public final class GdaxExchangeAdapter extends AbstractExchangeAdapter implement
                     if (queryString.length() > 1) {
                         queryString.append("&");
                     }
-                    //noinspection deprecation
                     queryString.append(param.getKey());
                     queryString.append("=");
-                    queryString.append(URLEncoder.encode(param.getValue(), "UTF-8"));
+                    queryString.append(URLEncoder.encode(param.getValue(), StandardCharsets.UTF_8));
                 }
 
                 requestHeaders.put("Content-Type", "application/x-www-form-urlencoded");
@@ -737,7 +733,7 @@ public final class GdaxExchangeAdapter extends AbstractExchangeAdapter implement
             final URL url = new URL(PUBLIC_API_BASE_URL + apiMethod + queryString);
             return makeNetworkRequest(url, "GET", null, requestHeaders);
 
-        } catch (MalformedURLException | UnsupportedEncodingException e) {
+        } catch (MalformedURLException e) {
             final String errorMsg = UNEXPECTED_IO_ERROR_MSG;
             LOG.error(errorMsg, e);
             throw new TradingApiException(errorMsg, e);
@@ -861,7 +857,7 @@ public final class GdaxExchangeAdapter extends AbstractExchangeAdapter implement
 
             // Sign the signature string and Base64 encode it
             mac.reset();
-            mac.update(signatureBuilder.getBytes("UTF-8"));
+            mac.update(signatureBuilder.getBytes(StandardCharsets.UTF_8));
             final String signature = DatatypeConverter.printBase64Binary(mac.doFinal());
 
             // Request headers required by Exchange
@@ -875,7 +871,7 @@ public final class GdaxExchangeAdapter extends AbstractExchangeAdapter implement
             final URL url = new URL(invocationUrl);
             return makeNetworkRequest(url, httpMethod, requestBody, requestHeaders);
 
-        } catch (MalformedURLException | UnsupportedEncodingException e) {
+        } catch (MalformedURLException e) {
             final String errorMsg = UNEXPECTED_IO_ERROR_MSG;
             LOG.error(errorMsg, e);
             throw new TradingApiException(errorMsg, e);
@@ -927,11 +923,11 @@ public final class GdaxExchangeAdapter extends AbstractExchangeAdapter implement
         final OtherConfig otherConfig = getOtherConfig(exchangeConfig);
 
         final String buyFeeInConfig = getOtherConfigItem(otherConfig, BUY_FEE_PROPERTY_NAME);
-        buyFeePercentage = new BigDecimal(buyFeeInConfig).divide(new BigDecimal("100"), 8, BigDecimal.ROUND_HALF_UP);
+        buyFeePercentage = new BigDecimal(buyFeeInConfig).divide(new BigDecimal("100"), 8, RoundingMode.HALF_UP);
         LOG.info(() -> "Buy fee % in BigDecimal format: " + buyFeePercentage);
 
         final String sellFeeInConfig = getOtherConfigItem(otherConfig, SELL_FEE_PROPERTY_NAME);
-        sellFeePercentage = new BigDecimal(sellFeeInConfig).divide(new BigDecimal("100"), 8, BigDecimal.ROUND_HALF_UP);
+        sellFeePercentage = new BigDecimal(sellFeeInConfig).divide(new BigDecimal("100"), 8, RoundingMode.HALF_UP);
         LOG.info(() -> "Sell fee % in BigDecimal format: " + sellFeePercentage);
     }
 
